docs: add documentation for  delete opening
