# docs/swagger.yaml
@@ -21,6 +21,13 @@ definitions:
       message:
         type: string
     type: object
+  handler.DeleteOpeningResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.OpeningResponse'
+      message:
+        type: string
+    type: object
   handler.ErrorResponse:
     properties:
       errorCode:
@@ -82,6 +89,35 @@ paths:
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
       summary: create opening
+      tags:
+      - openings
+  /openings/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete a new job opening
+      parameters:
+      - description: Opening identification
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/handler.DeleteOpeningResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: delete opening
       tags:
       - openings
 swagger: "2.0"
