# handler/delete_opening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Basepath api/v1
+// @Summary delete opening
+// @Description delete a new job opening
+// @tags openings
+// @Accept json
+// @Produce json
+// @Param id path int true "Opening identification"
+// @Success 204 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings/{id} [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	id := ctx.Param("id")
 
@@ -21,7 +33,7 @@ func DeleteOpeningHandler(ctx *gin.Context) {
 
 	if err := db.First(&opening, id).Error; err != nil {
 		logger.Errorf("Error deleting opening: %v", err)
-		sendError(ctx, http.StatusNotFound, fmt.Sprintf("opening with id:  %s not found", id))
+		sendError(ctx, http.StatusNotFound, fmt.Sprintf("opening with id: %s not found", id))
 		return
 	}
 
@@ -31,5 +43,5 @@ func DeleteOpeningHandler(ctx *gin.Context) {
 		return
 	}
 
-	sendSuccess(ctx, http.StatusAccepted, "delete-opening", opening)
+	sendSuccess(ctx, http.StatusNoContent, "delete-opening", opening)
 }
